--- a/css/index.css
+++ b/css/index.css
@@ -138,4 +138,77 @@ nav {
 }
 
 
+@media only screen and (max-width: 600px) {
+    .signin-btn {
+    height: 15px;
+    width: 60px;
+    font-size: 10px;
+    }
+
+    .nav-items {
+        justify-content: space-between;
+        width: 50%;
+    }
+
+    .nav-item {
+        font-size: 8px;
+    }
+
+    .intro-section {
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+        height: fit-content;
+    }
+
+    [alt="intro-img"] {
+        width: 300px;
+        margin-top: 50px;
+        bottom: 0;
+    }
+
+    .imgs-div::after {
+        display: none;
+        bottom: 0;
+    }
+
+    .vector-img {
+    bottom: 120px;
+    width: 60px;
+}
+
+.imgs-div img:nth-child(2) {
+    position: relative;
+    bottom: 95px;
+    left: 35px;
+    width: 10px;
+}
+
+    .left-section {
+        width: fit-content;
+        align-items: center;
+    }
+
+    .left-section h1 {
+        margin-top: 50px;
+        font-size: 50px;
+    }
+    
+    .left-section h4 {
+        width: 240px;
+        font-size: 12px;
+        line-height: 20px;
+        margin-top: 40px;
+    }
+
+    .learn-more-btn {
+        width: 100px;
+        height: 30px;
+        font-size: 10px;
+        margin-top: 30px;
+    }
+   
+  }
+
+
 
